finishing cv connections. refactor file recorder to add multi track recorder using cv connections

--- a/libneil/src/libzzub/SConscript
+++ b/libneil/src/libzzub/SConscript
@@ -43,17 +43,27 @@ files = [
     'midi_driver.cpp',
     'midi_track.cpp',
     'recorder.cpp',
+    'recorder/file_plugin.cpp',
+    'recorder/file.cpp',
+    'recorder/wavetable_plugin.cpp',
     'ccm_read.cpp',
     'ccm_write.cpp',
     'ccm_helpers.cpp',
     'connections.cpp',
-    'cv_connections.cpp',
+    'events.cpp',
+    # 'cv_connections.cpp',
     'input.cpp',
     'operations.cpp',
     'output.cpp',
     'ports.cpp',
     'ports/param_port.cpp',
-    'ports/ports_facade.cpp',
+    'ports/buffers.cpp',
+    'ports/port_facade.cpp',
+    'ports/port_plugin.cpp',
+    "cv/data.cpp",
+    "cv/source.cpp",
+    "cv/target.cpp",
+    "cv/transporter.cpp",
     'song.cpp',
     'synchronization.cpp',
     'waveimport.cpp',
